--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,10 +3,10 @@
 <title>表白</title>
 <!--引入开始-->
  
-<link rel="stylesheet" type="text/css" href="static/allCss/style/style.css">
-<link rel="stylesheet" type="text/css" href="static/allJs/bootstrap3.3.6/css/bootstrap.css">
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="static/allJs/bootstrap3.3.6/js/bootstrap.css"></script>
+<link rel="stylesheet" type="text/css" href="allCss/style/style.css">
+<link rel="stylesheet" type="text/css" href="allJs/bootstrap3.3.6/css/bootstrap.css">
+<script type="text/javascript" src="allJs/jquery.2.1.4/jquery.js"></script>
+<script type="text/javascript" src="allJs/bootstrap3.3.6/js/bootstrap.css"></script>
 
 <!--引入结束-->
 </head>  
